--- a/source/_posts/全局渐变效果实现.md
+++ b/source/_posts/全局渐变效果实现.md
@@ -1,6 +1,6 @@
 ---
 title: 全局渐变效果实现
-created: '2022-02-01'
+date: '2022-02-01'
 tags: ['Unity','ShaderLab','shader','demo']
 categories: 探索发现
 cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220206014120.png
