--- a/source/_posts/菲涅尔反射实现边缘光效果.md
+++ b/source/_posts/菲涅尔反射实现边缘光效果.md
@@ -1,7 +1,7 @@
 ---
 tags: ['Unity','ShaderLab','shader','demo']
 title: 菲涅尔反射实现边缘光效果
-date: '2022-01-17'
+created: '2022-01-17'
 categories: 探索发现
 cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220117144049.png
 ---
