--- a/source/_posts/程序棋盘格效果实现.md
+++ b/source/_posts/程序棋盘格效果实现.md
@@ -1,7 +1,7 @@
 ---
 tags: ['demo','Unreal','shader']
 title: 程序棋盘格效果实现
-date: '2022-01-21'
+created: '2022-01-21'
 categories: 探索发现
 cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220121223454.png
 ---
