update picture source

--- a/source/_posts/元素宇宙 - 地图与人物关系设计.md
+++ b/source/_posts/元素宇宙 - 地图与人物关系设计.md
@@ -3,7 +3,7 @@ title: Elemental Universe/元素宇宙 - 地图与人物关系设计
 tags: ['Unity','独立游戏','元素宇宙','demo']
 categories: 工作记录
 date: '2022-09-20T08:20:39.263Z'
-cover: https://tvax1.sinaimg.cn/large/006UcwnJly1h6d75gh0o3j31jk2bcdkn.jpg
+cover: https://ae01.alicdn.com/kf/Sddfcae86ec6b4c6f949bba8648d91c1dA.jpg
 ---
 
 <script src="https://cdn.jsdelivr.net/npm/echarts-gl@1.1.1/dist/echarts-gl.min.js"></script>
