--- a/source/_posts/排序算法之快归希堆.md
+++ b/source/_posts/排序算法之快归希堆.md
@@ -4,7 +4,7 @@ tags: ['算法与数据结构','算法','计算机科学技术','面试相关']
 categories: 算法与数据结构
 date: '2024-03-09 15:39:41'
 copyright_author: 时光
-cover: wons_in_glacier.png
+cover: geometry_glacier_httpss.mj.runklX034FNpZk_male_character_profil_88fa1b11-63d6-4e9b-aa12-a33a3ead5c87.png
 katex: true
 ---
 
@@ -144,7 +144,7 @@ $$D_m = N/2, D_k = D_{k+1}/2$$
     - 平均时间复杂度为 $O(n^{7/6})$。
 
 ### 为什么说希尔排序突破了O(n^2)级算法？
-排序算法本质上就是一个消除逆序对的过程。
+排序算法本质上就是一个消除**逆序对**的过程。
 
 对于随机数组，逆序对的数量是O(N^2)级的，如果采用「交换相邻元素」的办法来消除逆序对，每次最多只能消除一组逆序对，因此必须执行O(N^2)级的交换次数，这就是为什么冒泡、插入、选择算法只能到 O(N^2) 级的原因。反过来说，基于交换元素的排序算法要想突破O(N^2)级，必须通过一些比较，交换间隔比较远的元素，使得一次交换能消除一个以上的逆序对。
 
@@ -167,7 +167,6 @@ $$D_m = N/2, D_k = D_{k+1}/2$$
 > **几种节点类型**
 >- **根节点**：最顶端的节点
 >- **叶子节点**：没有子节点的节点
->- **子节点**：有父节点的节点
 
 利用堆的思想，W. J. Williams 在 1964 年提出了堆排序的方法：
 1. **Build max heap**：用数列构建出一个大顶堆，取出堆顶的数字（最大的数）；
@@ -183,9 +182,10 @@ $$D_m = N/2, D_k = D_{k+1}/2$$
 3. 对于有 n 个元素的完全二叉树(n≥2)，它的最后一个非叶子结点的下标：n/2 - 1
 
 通过这些性质，我们并不需要真的通过构建Node类的方式“建造”一棵二叉树，只需要通过数组各个元素的编号抽象出堆的结构（但本质上还是一个数组）进行操作即可。也正因为如此，堆排序可以是In-place类型的排序算法。
+
 <img src="https://img14.360buyimg.com/ddimg/jfs/t1/93573/18/44451/29089/65eeac39F59127978/07fa2b29853f0a72.jpg" width=300 alt="手绘示意图" title="手绘示意图" />
 
-理论已经完备，现在开始准备构建初始大顶堆吧！我们从最后一个**非叶子节点**开始调整大顶堆，比较节点与根节点之间数值的大小并交换。有关调整的部分，就是**Heapify**。
+理论已经完备，现在开始准备构建初始大顶堆吧！我们从最后一个**非叶子节点**(在示意图中指第【6/2-1】，也就是第 2 个节点“3”)开始调整大顶堆，比较节点与根节点之间数值的大小并交换。有关调整的部分，就是**Heapify**。
 ```Java
 // 构建初始大顶堆
 private static void buildMaxHeap(int[] arr) {
@@ -275,7 +275,162 @@ private static void maxHeapify(int[] arr, int i, int heapSize) {
 ```
 
 ## 快速排序/Quick Sort
+- Stable/In-place
+- 时间复杂度：O(nlogn)
+- 空间复杂度：O(1)
+
+{% video Quicksort.mp4 %}
+
+快速排序算法是面试中考察的重点，也是应用最广泛的排序算法。排序过程是：
+
+1. 从数组中取出一个数，称之为基数（pivot）；
+2. 遍历数组，将比基数大的数字放到它的右边，比基数小的数字放到它的左边。遍历完成后，数组被分成了左右两个区域；
+3. 将左右两个区域视为两个数组，重复前两个步骤，直到排序完成。
+
 
 
 ## 归并排序/Merge Sort
+- Stable/Out-place
+- 时间复杂度：O(nlogn)
+- 空间复杂度：O(n)
 
+<img src="https://img14.360buyimg.com/ddimg/jfs/t1/216470/20/37859/45936/65f1351cFf8f322ea/48573fa096f46453.jpg" width=500 alt="图解归并排序" title="图解归并排序" />
+
+<br/>
+
+{% video Mergesort.mp4 %}
+
+如图解所示，归并排序分成两步，一是拆分数组，二是合并数组，它是**分治思想**的典型应用。分治的意思是“分而治之”（很贴切又有文化的译名），分的时候体现了二分的思想。
+
+保证递归排序效率的关键点在于，当两个要合并的数组都是有序数组的时候，后续插入的元素一定不会在前面插入的元素之前。在逐个插入的过程中，每次插入时，只需要从上次插入的位置开始，继续向后寻找插入位置即可。
+以下是合并两个有序数组的代码：
+```Java
+// 将两个有序数组合并为一个有序数组
+private static int[] merge(int[] arr1, int[] arr2) {
+    int[] result = new int[arr1.length + arr2.length];
+    int index1 = 0, index2 = 0;
+    while (index1 < arr1.length && index2 < arr2.length) {
+        if (arr1[index1] <= arr2[index2]) {
+            result[index1 + index2] = arr1[index1];
+            index1++;
+        } else {
+            result[index1 + index2] = arr2[index2];
+            index2++;
+        }
+    }
+    // 将剩余数字补到结果数组之后
+    while (index1 < arr1.length) {
+        result[index1 + index2] = arr1[index1];
+        index1++;
+    }
+    while (index2 < arr2.length) {
+        result[index1 + index2] = arr2[index2];
+        index2++;
+    }
+    return result;
+}
+```
+
+{% tabs 归并排序的写法 %}
+<!-- tab 一般来说的写法 -->
+有了我们刚才写的合并两个有序数组的方法，现在我们就要将待排序的数组拆成一对对有序数组。怎么拆呢？
+我们可以通过二分法结合递归的形式进行拆分：
+```Java
+public static int[] void mergeSort(int[] arr) {
+    if (arr.length == 0) return;
+    int[] result = divide(arr, 0, arr.length - 1);
+    
+    return result;
+}
+
+// 对 arr 的 [start, end] 区间归并排序
+private static int[] divide(int[] arr, int start, int end) {
+    // 只剩下一个数字，停止拆分，返回单个数字组成的数组
+    if (start == end) return new int[]{arr[start]};
+    // 二分思想
+    int middle = (start + end) / 2;
+    // 拆分左边区域
+    int[] left = divide(arr, start, middle);
+    // 拆分右边区域
+    int[] right = divide(arr, middle + 1, end);
+
+    // 拆分到底之后，开始合并左右区域
+    return merge(left, right);
+}
+```
+可以看到，divide 函数将原有数组不断地**二分**（(start + end) / 2），直到只剩下最后一个数字（return new int[]{arr[start]}）。此时嵌套的递归开始返回，一层层地调用merge(int[] arr1, int[] arr2)函数，也就是我们刚才写的将两个有序数组合并为一个有序数组的函数。
+
+这就是最经典的归并排序，只需要一个二分拆数组的递归函数和一个合并两个有序列表的函数即可。
+
+但这份代码还有一个缺点，那就是在递归过程中，开辟了很多临时空间，接下来我们就来看下它的优化过程。
+<!-- endtab -->
+
+<!-- tab 优化：减少临时空间开辟 -->
+在第一种写法中，我们在递归的过程在开辟了不少用于临时储存子数组的**left**和**right**，存在可优化的空间。为了减少在递归过程中不断开辟空间的问题，我们可以在归并排序之前，先开辟出一个临时空间**result**，在递归过程中统一使用此空间进行归并。
+```Java
+public static int[] void mergeSort(int[] arr) {
+    if (arr.length == 0) return;
+    int[] result = new int[arr.length];
+    divide(arr, 0, arr.length - 1, result);
+
+    return result;
+}
+
+// 对 arr 的 [start, end] 区间归并排序
+private static void divide(int[] arr, int start, int end, int[] result) {
+    // 只剩下一个数字，停止拆分
+    if (start == end) return;
+    // 二分思想
+    int middle = (start + end) / 2;
+    // 拆分左边区域，并将归并排序的结果保存到 result 的 [start, middle] 区间
+    divide(arr, start, middle, result);
+    // 拆分右边区域，并将归并排序的结果保存到 result 的 [middle + 1, end] 区间
+    divide(arr, middle + 1, end, result);
+    // 合并左右区域到 result 的 [start, end] 区间
+    merge(arr, start, end, result);
+}
+```
+“分”的时候其实用不到result，主要是在“治”的时候。请看改写后的merge函数，为了实现在result内部合并有序部分，merge 函数接收的参数不再是两个数组，而是 result 数组中需要合并的两个数组的**首尾下标**。根据首尾下标可以分别计算出两个有序数组的首尾下标 start1、end1、start2、end2，之后的过程就和之前合并两个有序数组的代码类似了。
+```Java
+// 将 result 的 [start, middle] 和 [middle + 1, end] 区间合并
+private static void merge(int[] arr, int start,  int end, int[] result) {
+    int middle = (start + end) / 2;
+    // 数组 1 的首尾位置
+    int start1 = start;
+    int end1 = middle;
+    // 数组 2 的首尾位置
+    int start2 = middle + 1;
+    int end2 = end;
+    // 用来遍历数组的指针
+    int index1 = start1;
+    int index2 = start2;
+    // 结果数组的指针
+    int resultIndex = start1;
+    while (index1 <= end1 && index2 <= end2) {
+        if (arr[index1] <= arr[index2]) {
+            result[resultIndex++] = arr[index1++];
+        } else {
+            result[resultIndex++] = arr[index2++];
+        }
+    }
+    // 将剩余数字补到结果数组之后
+    while (index1 <= end1) {
+        result[resultIndex++] = arr[index1++];
+    }
+    while (index2 <= end2) {
+        result[resultIndex++] = arr[index2++];
+    }
+    // 将 result 操作区间的数字拷贝到 arr 数组中，以便下次比较
+    for (int i = start; i <= end; i++) {
+        arr[i] = result[i];
+    }
+}
+```
+<!-- endtab -->
+
+<!-- tab 原地归并？ -->
+虽然在上面的写法中不用开辟临时数组记录“分”的部分，但最后还是需要用 result 数组来“治”，这导致归并排序是Out-place类型的排序算法。那有没有办法将归并排序改写为就地形式呢？
+答案是：没有！
+所谓的**原地归并排序**事实上并不存在，许多算法书籍中都没有收录这种算法。它打着归并排序的幌子，卖的是**插入排序**的思想，实际排序效率比归并排序低得多，时间复杂度达到了O(n^2)。
+<!-- endtab -->
+{% endtabs %}
