排序算法（2）完结
我终于掌握了快排！

--- a/source/_posts/排序算法之快归希堆.md
+++ b/source/_posts/排序算法之快归希堆.md
@@ -275,19 +275,189 @@ private static void maxHeapify(int[] arr, int i, int heapSize) {
 ```
 
 ## 快速排序/Quick Sort
-- Stable/In-place
-- 时间复杂度：O(nlogn)
-- 空间复杂度：O(1)
+- Unstable/In-place
+- 平均时间复杂度：O(nlogn)
+- 最坏时间复杂度：O(n^2)
+- 空间复杂度：O(logn) ~ O(n)
 
 {% video Quicksort.mp4 %}
 
-快速排序算法是面试中考察的重点，也是应用最广泛的排序算法。排序过程是：
+快速排序算法是面试中考察的重点，也是应用最广泛的排序算法。快速排序使用到了**分治**的思想。排序过程是：
 
 1. 从数组中取出一个数，称之为基数（pivot）；
 2. 遍历数组，将比基数大的数字放到它的右边，比基数小的数字放到它的左边。遍历完成后，数组被分成了左右两个区域；
 3. 将左右两个区域视为两个数组，重复前两个步骤，直到排序完成。
 
+> 基数的选择没有固定标准，随意选择区间内任何一个数字做基数都可以。通常来讲有三种选择方式：
+>- 选择 **第一个元素** 作为基数
+>- 选择 **最后一个元素** 作为基数
+>- 选择区间内一个 **随机元素** 作为基数
 
+由此，可以写出快速排序的基本框架：
+
+```Java
+public void quickSort(int[] arr){
+    quickSort(arr, 0, arr.length-1)
+}
+public void quickSort(int[] arr, int start, int end){
+    if(start >= end)
+        return;
+    int mid = partition(arr, start, end);
+    quickSort(arr, start, mid - 1);
+    quickSort(arr, mid + 1, end);
+}
+public int partition(int[] arr, int start, int end){
+    // 分区函数
+}
+```
+
+“start >= end”反映了我们需要考虑的边界问题：当拆分完的左右数组只有一个或者没有元素时，不需要对其进行快排操作。“**partition**”函数为分区函数，选择的基数不同，该函数的实现也不同。下面的代码记录了第一种（选择第一个元素作为基数）与第三种（随机选择基数）实现的过程。
+从数学的角度上来说，选择随机元素作为基数的平均时间复杂度是最优的。因为当待排序的数据是正序或逆序时，选择第一或最后一个元素会导致每一轮都只能排好一个基数，导致时间复杂度提升到O(n^2)量级。
+
+{% tabs 快速排序的写法 %}
+<!-- tab 一般来说的写法 -->
+在这个写法中，我们选择左右数组中的第一个数作为基数（pivot），利用双指针思想对其进行快速排序。
+从 left 开始，遇到比基数大的数，记录其下标；再从 right 往前遍历，找到第一个比基数小的数，记录其下标；然后交换这两个数。继续遍历，直到 left 和 right 相遇。然后就和刚才的算法一样了，交换基数和中间值，并返回中间值的下标。
+```Java
+public void quickSort(int[] arr){
+    quickSort(arr, 0, arr.length-1);
+}
+public void quickSort(int[] arr, int start, int end){
+    // 设置递归边界情况，即只有一个或没有元素时结束
+    if(start >= end)
+        return;
+    int mid = partition(arr, start, end);
+    quickSort(arr, start, mid - 1);     // 这里是不包括已经确定位置的mid的
+    quickSort(arr, mid + 1, end);
+}
+public int partition(int[] arr, int start, int endd){
+    int pivot = arr[start];
+    // 设置头尾指针
+    int head = start + 1;
+    int end = endd;
+    while(head < end){
+        while(head < end && arr[head] <= pivot){
+            head++;
+        }
+        while(head < end && arr[end] >= pivot){
+            end--;
+        }
+        if(head < end){
+            swap(head, end);
+            head++;     // 继续搜索逆序对
+            end--;
+        }
+    }
+    // head与end相碰，代表当前仅有两个元素
+    if(head == end && arr[end] > pivot){
+        end--;
+    }
+    // 将pivot与end交换，结束一轮快排
+    swap(start, end);
+    // 返回已序mid
+    return end;
+}
+```
+<!-- endtab -->
+
+<!-- tab 随机选择pivot -->
+在普通快速排序中，我们选择了固定的基数（如第一个或者最后一个），再结合双指针的方式进行快排。那如果我们不是按照这种模式化的方式选择基数，而是随机选择基数呢？
+这种快速排序也叫做“**随机快速排序**”，理论上平均时间复杂度比普通快排要好，但受到随机函数的影响在性能上也会有些许损耗。
+你还记得本小节开头的视频吗？视频并没有交代为什么一开始选择了“**3**”，你可以当作这个“**3**”就是**随机选择**出来的。后续的操作和视频中的如出一辙：
+1. 我们先将随机挑选出的数交换到数组的最后一位
+2. 然后将head和end指针设置在 start 和 end - 1 的位置
+3. 接下来开始双指针吧！
+```Java
+public void quickSortRandom(int[] arr){
+    quickSortRandom(arr, 0, arr.length-1);
+}
+public void quickSortRandom(int[] arr, int start, int end){
+    if(start >= end)
+        return;
+    int mid = partitionRandom(arr, start, end);
+    quickSortRandom(arr, start, mid - 1);     // 这里是不包括已经确定位置的mid的
+    quickSortRandom(arr, mid + 1, end);
+}
+public int partitionRandom(int[] arr, int start, int endd){
+    // 随机选择pivot
+    int random = start + (int)(Math.random() * (endd-start+1));
+    int pivot = arr[random];
+    // 交换pivot与当前尾部
+    swap(random, endd);
+    // 设置头尾指针
+    int head = start;
+    int end = endd - 1;
+    while(head < end){
+        while(head < end && arr[head] <= pivot){
+            head++;
+        }
+        while(head < end && arr[end] >= pivot){
+            end--;
+        }
+        if(head < end){
+            swap(head, end);
+            head++;     // 继续搜索逆序对
+            end--;
+        }
+    }
+    if(head == end && arr[head] < pivot){    // head与end相碰，代表当前仅有两个元素
+        head++;
+    }
+    // 将置于尾部的pivot与head(left)交换，结束一轮快排
+    swap(head, endd);
+    // 返回已序mid
+    return head;
+}
+```
+<!-- endtab -->
+
+<!-- tab 双轴快排 -->
+
+<!-- endtab -->
+{% endtabs %}
+
+优化方式除了选择随机基数之外，还可以先用**洗牌算法**（如Java中的**Collections.shuffle**函数）打乱输入数组。
+
+```Java
+private static final int SHUFFLE_THRESHOLD = 5;
+
+public static void shuffle(List<?> list, Random rnd) {
+    int size = list.size();
+    if (size < SHUFFLE_THRESHOLD || list instanceof RandomAccess) {
+        for (int i=size; i>1; i--)
+            swap(list, i-1, rnd.nextInt(i));
+    } else {
+        Object arr[] = list.toArray();
+        // Shuffle array
+        for (int i=size; i>1; i--)
+            swap(arr, i-1, rnd.nextInt(i));
+        // Dump array back into list
+        // instead of using a raw type here, it's possible to capture
+        // the wildcard but it will require a call to a supplementary
+        // private method
+        ListIterator it = list.listIterator();
+        for (int i=0; i<arr.length; i++) {
+            it.next();
+            it.set(arr[i]);
+        }
+    }
+}
+
+public static void swap(List<?> list, int i, int j) {
+    // instead of using a raw type here, it's possible to capture
+    // the wildcard but it will require a call to a supplementary
+    // private method
+    final List l = list;
+    l.set(i, l.set(j, l.get(i)));
+}
+
+private static void swap(Object[] arr, int i, int j) {
+    Object tmp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = tmp;
+}
+
+```
 
 ## 归并排序/Merge Sort
 - Stable/Out-place
@@ -296,11 +466,11 @@ private static void maxHeapify(int[] arr, int i, int heapSize) {
 
 <img src="https://img14.360buyimg.com/ddimg/jfs/t1/216470/20/37859/45936/65f1351cFf8f322ea/48573fa096f46453.jpg" width=500 alt="图解归并排序" title="图解归并排序" />
 
-<br/>
+<br/> 
 
 {% video Mergesort.mp4 %}
 
-如图解所示，归并排序分成两步，一是拆分数组，二是合并数组，它是**分治思想**的典型应用。分治的意思是“分而治之”（很贴切又有文化的译名），分的时候体现了二分的思想。
+如图解所示，归并排序分成两步，一是拆分数组，二是合并数组，它也是**分治思想**的典型应用。分治的意思是“分而治之”（很贴切又有文化的译名），分的时候体现了二分的思想。
 
 保证递归排序效率的关键点在于，当两个要合并的数组都是有序数组的时候，后续插入的元素一定不会在前面插入的元素之前。在逐个插入的过程中，每次插入时，只需要从上次插入的位置开始，继续向后寻找插入位置即可。
 以下是合并两个有序数组的代码：
