--- a/source/_posts/排序算法.md
+++ b/source/_posts/排序算法.md
@@ -16,8 +16,8 @@ cover: https://img13.360buyimg.com/ddimg/jfs/t1/238481/34/4684/97117/65e98056F9a
 在不同领域，排序算法的实现各有千秋。总体来看，排序算法大致可分为十类：
 
 - {% label 选泡插 red %}：选择排序/Selection Sort、冒泡排序/Bubble Sort、插入排序/Insertion Sort
-- {% label 快归希堆 green %}：快速排序/Quick Sort、归并排序/Merge Sort、希尔排序/Shell、堆排序/Heap Sort
-- {% label 桶计基 blue %}：桶排序/Bucket、计数排序、基数排序
+- {% label 快归希堆 green %}：快速排序/Quick Sort、归并排序/Merge Sort、希尔排序/Shell Sort、堆排序/Heap Sort
+- {% label 桶计基 blue %}：桶排序/Bucket sort、计数排序/Counting Sort、基数排序/Radix Sort
 
 在排序算法中，按照其特性，还有以下两种分类方式：
 
@@ -182,6 +182,9 @@ public static void swap(int[] arr, int a, int b){
 
 {% tabs 选择排序的写法 %}
 <!-- tab 一般来说的写法 -->
+
+这种写法也被称作“简单选择排序”。关键字比较的次数与记录的初始排列无关。
+
 ```Java
 public static void selectionSort(int[] array) {
     int min;
