--- a/source/_posts/排序算法之快归希堆.md
+++ b/source/_posts/排序算法之快归希堆.md
@@ -12,7 +12,7 @@ katex: true
 
 - {% label 选泡插 red %}：选择排序/Selection Sort、冒泡排序/Bubble Sort、插入排序/Insertion Sort
 - {% label 快归希堆 green %}：快速排序/Quick Sort、归并排序/Merge Sort、希尔排序/Shell Sort、堆排序/Heap Sort
-- {% label 桶计基 blue %}：桶排序/Bucket、计数排序、基数排序
+- {% label 桶计基 blue %}：桶排序/Bucket sort、计数排序/Counting Sort、基数排序/Radix Sort
 
 本文将介绍第二类排序算法，它们的时间复杂度均为O(nlogn)级别。
 
@@ -274,6 +274,8 @@ private static void maxHeapify(int[] arr, int i, int heapSize) {
 }
 ```
 
+> 在含有n个关键字的小顶堆中,关键字最大的记录有可能存储在 [n/2] + 2 的位置上。
+
 ## 快速排序/Quick Sort
 - Unstable/In-place
 - 平均时间复杂度：O(nlogn)
@@ -358,6 +360,13 @@ public int partition(int[] arr, int start, int endd){
     return end;
 }
 ```
+<!-- endtab -->
+
+<!-- tab 选择最后一个元素为pivot -->
+和第一种写法非常类似，不展开叙述了。可以看下面的图解：
+
+<img src="https://img11.360buyimg.com/ddimg/jfs/t1/235683/5/12303/62936/65f41ae7Ffbc8f474/c2c5f66a069969ed.jpg" alt="X$X3M~2A7C`)8$KMYA`A~9A.png" title="X$X3M~2A7C`)8$KMYA`A~9A.png" />
+
 <!-- endtab -->
 
 <!-- tab 随机选择pivot -->
@@ -458,6 +467,9 @@ private static void swap(Object[] arr, int i, int j) {
 }
 
 ```
+
+> 快速排序在排序的过程中，既要从后向前查找，也要从前向后查找，因此宜采用**顺序存储**。
+元素的交换可能会出现**新的逆序**。
 
 ## 归并排序/Merge Sort
 - Stable/Out-place
