--- a/source/_posts/计算机网络-1-整体概念介绍.md
+++ b/source/_posts/计算机网络-1-整体概念介绍.md
@@ -8,9 +8,11 @@ hide: true
 cover: geometry_glacier_httpss.mj.runswt2Oa1F9yI_a_man_in_19_standing__5ec542d1-feff-42e9-bb7c-14048fa4dbba.png
 ---
 
-# 计算机网络的概念
+# 计算机网络的概念及功能
 
 <img src="https://img11.360buyimg.com/ddimg/jfs/t1/184415/38/42968/76339/65f183f7F4e35ca9b/03ea0efc07cb7122.jpg" width=500 alt="计算机网络" title="计算机网络" />
+
+## 概念
 
 > **计算机网络**（英语：computer network），通常也简称网络，是指容许节点分享资源的数字电信网络。在电脑网络，电脑设备会透过**节点**之间的连接（数据链路）互相交换数据，即收发（接收和发放）网络信息。
 
@@ -27,7 +29,7 @@ cover: geometry_glacier_httpss.mj.runswt2Oa1F9yI_a_man_in_19_standing__5ec542d1-
 - **互连**：通过通信链路互联互通
 - **自治**：无主从关系、各个终端高度自治
 
-## 功能
+{% folding orange closed, 计算机网络的具体功能 %}
 计算机网络系统有以下具体功能：
 - **数据通信**：终端之间通过数据链路互相交换数据，即收发（接收和发放）网络信息。
 - **资源共享**：同一个计算机网络上的其他计算机可以使用某台计算机的计算机资源的行为，可以共享硬件、软件、数据。
@@ -37,9 +39,9 @@ cover: geometry_glacier_httpss.mj.runswt2Oa1F9yI_a_man_in_19_standing__5ec542d1-
 - **分布式处理**：多台计算机各自承担同一工作任务的不同部分，使工作效率提高。
 - **提高可靠性**：这是分布式处理的一个优点，如果网络中的一台主机宕机，集群中还有其他机器可以顶替其工作。
 - **负载均衡**：这也是分布式处理的优点，可以让任务量分到多台计算机上。
+{% endfolding %}
 
-# 网络与互联网
-## 网络结构变迁
+## 饭后消遣：互联网的历史
 美苏冷战时期，为防止苏联针对性的破坏主机，美国国防部想出了将主机分散到各地并使用链路链接起来共享数据的办法。在这种情况下，即使苏联炸毁了一台主机，其他主机也保存有重要的军事资料，这个系统被成为“**阿帕网**”（ARPAnet）。随着各地**网络**（net）逐渐出现，美国国防部最后接受了TCP/IP协议，将这些网络互连，**互联网**（internet）初具规模。在这个阶段：
 网络把许多计算机连接在一起，而互联网则把许多网络连接在一起，**因特网**（Internet）是世界上最大的互联网。
 - 网络：若干节点（如终端、交换机）、以及连接这些节点的链路
@@ -59,3 +61,90 @@ cover: geometry_glacier_httpss.mj.runswt2Oa1F9yI_a_man_in_19_standing__5ec542d1-
 这基本就是今天互联网的模型。互联网依然是若干网络通过**路由器**连接在一起组成的。
 
 # 组成及分类
+## 计算机网络的组成
+计算机网络是由 {%label 硬件 orange%}、{%label 软件 orange%} 和 {%label 协议 orange%} 三大要素按照一系列规则和约定组成的集合。
+
+{% folding orange closed, 硬件、软件和协议 %}
+- **硬件**
+各类端系统（终端）、路由器、交换机等；
+- **软件**
+附加在端系统上、或中间设备上的计算机程序；
+- **协议**
+软件通过协议传输数据，协议规定了数据在计算机网络中流通的规则。
+{% endfolding %}
+
+而从**工作方式**上，可以把计算机网络分为{%label 边缘部分 orange%} 和 {%label 核心部分 orange%}。
+
+{% folding orange closed, 边缘部分和核心部分 %}
+- **边缘部分**
+由各类端系统组成，包括计算机、摄像头、服务器等需要使用网络的终端，位于计算机网络系统的边缘。边缘系统通过以下方式实现通信：
+    - **C/S方式**
+    C/S 即 {%label Client blue%} 与 {%label Server blue%}，服务器与客户端，是最古老的一种通信方式。例如：当我们用qq发送消息时，我们的端系统（C）会先将消息发送给腾讯服务器（S），服务器处理完消息后再发送给接收人（C）。
+    访问服务的人越多，服务就越慢。
+    - **B/S方式**
+    B/S 即 {%label Broswer blue%} 与 {%label Server blue%}。在这个场景中，客户端被换成了浏览器，其他部分与C/S相同。
+    - **P2P**
+    P2P 即 peer-to-peer ，{%label 对等连接 blue%}。在这个模式中，端系统同时具有客户端与服务器的身份，可以彼此之间收发消息。在P2P网络中，主机的数量越多下载的速度就越快。
+    <img src="https://www.researchgate.net/publication/238638509/figure/fig1/AS:392801603866627@1470662608756/Architecture-of-C-S-and-P2P.png" width=500 alt="C/S方式（左）与对等连接（右）" title="C/S方式（左）与对等连接（右）" />
+    
+- **核心部分**
+为边缘部分提供服务，实现端与端之间的通信（即两个端系统之间的**进程之间的通信**）。其中包括路由器、中间设备等。
+{% endfolding %}
+
+从**功能组成**上，可以把计算机网络分为负责**数据通信**的 {%label 通信子网 orange%} 和负责**资源共享**或**数据处理**的 {%label 资源子网 orange%} 两部分。
+
+{% folding orange closed, 通信子网和资源子网 %}
+在 {%label OSI七层模型 purple%} 中，下三层（**网络层**、**数据链路层**、**物理层**）代表了 {%u 通信子网 %}；上三层（**应用层**、**表示层**、**会话层**）代表了 {%u 资源子网 %}。
+> **通信子网**
+    >- 由网络层的**路由器**、数据链路层的**交换机**和**网桥**、物理层的**集线器**和**中继器**组成。
+    >- 具有传输、交换、控制和存储的能力，可以实现联网计算机之间数据的通信。
+> **资源子网**
+    >- 实现资源共享功能的设备和软件的集合。
+
+{% endfolding %}
+
+## 计算机网络的分类
+按照**分布范围**，计算机网络可以分成 {%label 广域网/WAN green%}、{%label 城域网/MAN green%} 、{%label 局域网/LAN green%} 和 {%label 个人区域网/PAN green%} 四种类型。
+
+{% folding orange closed, 按照分布范围分类的四种计算机网络 %}
+1. 广域网
+使用交换技术（通过路由器等设备转发、存储、交换）。
+覆盖范围是几十时到几千公里，是因特网的主要组成部分，允许跨国传输数据。
+2. 城域网
+可以覆盖一个城市的网络。
+3. 局域网
+使用广播技术。
+在地理上范围比较小，比如一个学校、公司。
+4. 个人区域网
+使用无线技术。
+十米左右，基本指的是在个人电子设备（如手机、手环）相互连接。
+{% endfolding %}
+
+按照**使用者**区分，可以分成 {%label 公用网 green%} 和 {%label 专用网 green%} (如军队、政府等)。
+按照**数据交换技术**区分，则可以分成 {%label 电路交换 green%} 、{%label 报文交换 green%} 和 {%label 分组交换 green%} 三种类型。
+
+{% folding orange closed, 按照数据交换技术分类的三种计算机网络 %}
+1. 电路交换
+分为三个步骤（参考打电话）：建立连接、通话（期间一直占用连接，即**占线**）、释放连接。
+2. 报文交换
+使用了存储转发的技术，将报文传输给路由器A，再由路由器A根据最优路径原则转发给路由器B，最后转发到目的地。
+3. 分组交换
+与报文交换类似，其实“分组”就是将一整个完整的报文细分成小的“组”。
+{% endfolding %}
+
+按照**拓扑结构**分类，还可以将网络分成 {%label 总线型 green%}、{%label 星型 green%} 、{%label 环型 green%} 和 {%label 网状型 green%}（广域网常用的拓扑结构） 等多种类型。在这种分类中，我们将端系统或路由器抽象成一个个**节点**、将通信链路抽象成**线**，二者相结合的结构就是网络的“**拓扑结构**”。
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/NetworkTopologies.svg/1200px-NetworkTopologies.svg.png" width=500 alt="几种不同的网络拓扑结构" title="几种不同的网络拓扑结构" />
+
+最后，按照**传输技术**区分，可以分成 {%label 广播式网络 green%} 和 {%label 点对点网络 green%} 。
+
+{% folding orange closed, 按照传输技术分类的两种计算机网络 %}
+1. 广播式网络
+共享公共通信信道，应用于局域网（通常使用总线型拓扑结构）。
+2. 点对点网络
+使用**分组存储转发**和**路由选择**机制，应用于广域网（需要众多节点实现这两个功能，因此是网状结构）。
+{% endfolding %}
+
+# 标准化工作及相关组织
+
+# 性能指标
