非常大手笔的重整了一下博客系统

--- a/study_notes/source/_posts/排序算法.md
+++ b/study_notes/source/_posts/排序算法.md
@@ -5,6 +5,7 @@ categories: 算法与数据结构
 date: '2024-03-02 12:40:59'
 copyright_author: 时光
 cover: https://img13.360buyimg.com/ddimg/jfs/t1/238481/34/4684/97117/65e98056F9aa63fbd/675a286453df0bac.jpg
+hidden: true
 ---
 
 {% note info tips %}
