--- a/study_notes/source/_posts/排序算法之桶计基.md
+++ b/study_notes/source/_posts/排序算法之桶计基.md
@@ -6,6 +6,7 @@ date: '2024-03-14 21:47:16'
 copyright_author: 时光
 cover: geometry_glacier_httpss.mj.runklX034FNpZk_httpss.mj.runNOHRT7vJ_436f1ab3-00ce-43fc-bd27-5df52a390a4b.png
 katex: true
+hidden: true
 ---
 
 在不同领域，排序算法的实现各有千秋。总体来看，排序算法大致可分为十类：
