--- a/study_notes/source/_posts/计算机网络-1-整体概念介绍.md
+++ b/study_notes/source/_posts/计算机网络-1-整体概念介绍.md
@@ -5,6 +5,7 @@ categories: 计算机网络
 date: '2024-03-11 19:05:58'
 copyright_author: 时光
 cover: geometry_glacier_httpss.mj.runswt2Oa1F9yI_a_man_in_19_standing__5ec542d1-feff-42e9-bb7c-14048fa4dbba.png
+katex: true
 hidden: true
 ---
 
@@ -200,13 +201,56 @@ hidden: true
 
 ## 带宽
 **带宽**，在通信领域指某个**信号**具有的**频带宽度**，即最高频率与最低频率之差，单位是赫兹（Hz）。在计算机网络领域中，**带宽**指的则是网络的通信线路传送数据的能力，通常指单位时间内从网络中的某一点到另一点所能通过的“**{%label danger @最高数据率 %}**”，单位和速率一样。
-从另一个角度说，带宽反映了网络设备所支持的**最高速度**。
+从另一个角度说，带宽反映了网络设备所支持的**最高发送速度**。
+链路带宽1Mb/s，代表主机在1秒的时间内可以发送1Mb数据（即1us内发送1bit数据）。
 
+> **"发送速度"和"传输速度"并不相同！**
+信息以电磁波的形式在链路中传播，而电磁波在链路中的传播速度为2 \* 10^8 m/s，该传输速度是恒定的。之所以比光速（3 \* 10^8 m/s）慢，是因为传播介质造成了损耗（并非在真空中传输）。在这个条件下，电磁波在1us的时间内可以传输200m。
+带宽所表明的“**发送速度**”则代表主机在单位时间内能往链路上发送多少的数据量，或者说**{%label danger @最高数据率 %}**。
 
 ## 吞吐量
-吞吐量严格受到带宽和速率的影响。
+**吞吐量**表示在**单位时间**内通过某个**网络、信道或接口**的**数据量**，单位和速率以及带宽一样。
+吞吐量受到带宽和速率的影响，具体表现在：
+- 一条链路的带宽代表了吞吐量的上限；
+- 吞吐量代表单位时间内通过链路的所有数据量，是单位时间内所有往主机发送数据的服务器的速率的和
 
+## 时延
+**时延**指的是**数据**（如报文/分组/比特流）从网络/链路的一端传送到另一端所需要的**时间**，也叫 *延迟* 或 *迟延*，单位为s。
+时延分为以下四种，总时延为它们的和：
+1. **发送时延**（传输时延）
+    指从发送分组的第一个比特算起，到该分组的最后一个比特发送完成所需要的时间。
+    **发送时延 = 数据量 / 发送速率**
+    这代表如果有一组 200Mb 的数据待发送，但主机的速率只有 2Mbps，就需要 100 秒的时间才能发送完，这100s就是发送时延。最低发送时延的数值为数据量 / 信道带宽。
+2. **传播时延**
+    数据在链路上传播经过的时间。这段时间与电磁波的传播速度（常数，刚才介绍过了）和链路长度有关。
+    **传播时延 = 链路长度 / 电磁波速度**
+3. **排队时延**
+    指的是数据等待输出/输入链路**可用**的等待时间。当数据到达用以转发数据的**路由器**时，由于一台路由器的处理能力有限，数据可能会被暂存在路由器的**缓冲**中。当数据进入路由器，排队就结束了。
+    在下面的处理时延结束之后，数据可能要**等待输出链路可用**，这时候的等待时间仍属于排队时延。
+4. **处理时延**
+    数据进入路由器之后，路由器需要对数据进行**处理**，处理所花费的时间就是处理时延。处理的过程包括检查数据是否出错、为数据寻找传输出口等。
 
+## 时延带宽积
+**时延带宽积**又称为“**以比特为单位的链路长度**”，指的是**传播时延**与**带宽**的乘积，单位是bit。时延带宽积是一个描述**数据量**的性能属性，代表了某段链路现在有多少比特。
+时延带宽积 = 传播时延 × 带宽
+在公式中，传播时延的单位是s，带宽以bps作为单位。
+<img src="https://img14.360buyimg.com/ddimg/jfs/t1/244876/6/5801/17539/65faf2fcFb5d98f00/c483363a8be522df.jpg" alt="image.png" title="image.png" />
+
+## 往返时间RTT
+往返时间RTT指的是从发送方**发送数据**开始，到发送方收到接收方的**确认**（接收方收到数据后立即发送确认）**总共经历的时延**。
+RTT = 传播时延 * 2 + 末端处理时间
+两倍的传播时延代表了**往返的传播时延**，末端处理时间则指的是**接收方对数据的处理时间**。
+RTT越大，在收到确认之前可以发送的数据越多。这并不一定是件好事，比如在实时团队合作FPS游戏中，如果一个玩家与游戏服务器之间的RTT很大，在其他玩家眼里该玩家可能是在不断瞬移的。
+
+## 利用率
+**利用率**分为**信道利用率**和**网络利用率**。
+- **信道利用率**
+    信道利用率 = 信道上有数据通过的时间 / 总时间
+- **网络利用率**
+    网络利用率 = 所有信道的加权平均值
+
+利用率与时延存在指数关系。当利用率接近最大时，信道也是非常拥堵的，导致时延增大。
+<img src="https://img11.360buyimg.com/ddimg/jfs/t1/106751/18/39582/7284/65faf5eeFfa2417c0/98107564652b1386.jpg" width=300 alt="image.png" title="image.png" />
 
 | 复习周期 |   1d   |   2d   |   7d   |   21d  |
 |  :----: | :----: | :----: | :----: | :----: |
