--- a/study_notes/source/_posts/排序算法.md
+++ b/study_notes/source/_posts/排序算法.md
@@ -5,6 +5,7 @@ categories: 算法与数据结构
 date: '2024-03-02 12:40:59'
 copyright_author: 时光
 cover: https://img13.360buyimg.com/ddimg/jfs/t1/238481/34/4684/97117/65e98056F9aa63fbd/675a286453df0bac.jpg
+katex: true
 hidden: true
 ---
 
@@ -136,7 +137,7 @@ public static void bubbleSort(int[] arr) {
 
 
 ### 更高效的交换算法
-{% tabs 冒泡排序的写法 %}
+{% tabs 交换的写法 %}
 <!-- tab 初学者写法 -->
 在前面的代码中，我并没有写出交换方法 **swap** 的具体实现。作为初学者，很容易写出以下方法：
 ```Java
