--- a/study_notes/source/_posts/算法与数据结构.md
+++ b/study_notes/source/_posts/算法与数据结构.md
@@ -10,11 +10,37 @@ comments: false
 算法与数据结构相关笔记
 
 <!-- more -->
-
-# 排序算法
-
+# 算法
+## 排序算法
 [排序算法之选泡插](/next/排序算法/)
 [排序算法之快归希堆](/next/排序算法之快归希堆/)
 [排序算法之桶计基](/next/排序算法之桶计基/)
+[排序算法之拓扑排序](/next/排序算法之拓扑排序/)
 
-# 二叉树
+## 双指针
+
+## 二分
+
+## 递归与分治
+[递归思想](/next/递归思想/)
+
+## 贪心
+
+## 回溯
+
+## 动态规划
+
+## 位运算
+
+# 数据结构
+## 二叉树
+[二叉树的遍历](/next/二叉树的遍历/)
+[二叉树问题的基本思想](/next/二叉树问题的基本思想/)
+
+## 队列/栈
+
+## 链表
+
+## 哈希表
+
+## 图论
