--- a/study_notes/source/_posts/计算机网络.md
+++ b/study_notes/source/_posts/计算机网络.md
@@ -10,5 +10,10 @@ comments: false
 B站王道考研计算机网络系列课程的相关笔记
 
 <!-- more -->
-
+[计算机网络八股](/next/计算机网络八股/)
 [计算机网络(1) 整体概念介绍](/next/计算机网络-1-整体概念介绍/)
+[计算机网络(2) 物理层](/next/计算机网络-2-物理层/)
+计算机网络(3) 数据链路层
+计算机网络(4) 网络层
+计算机网络(5) 传输层
+计算机网络(6) 应用层
