--- a/study_notes/source/_posts/排序算法之快归希堆.md
+++ b/study_notes/source/_posts/排序算法之快归希堆.md
@@ -157,6 +157,7 @@ $$D_m = N/2, D_k = D_{k+1}/2$$
 - Unstable/In-place
 - 时间复杂度：初始化建堆O(n)({% label info @插入法 %}建堆O(nlogn))，重建堆O(logn)，执行n-1次
 - 空间复杂度：O(1)
+- 平均比较次数：2nlogn
 
 {% video Heapsort.mp4 %}
 
@@ -294,6 +295,7 @@ private static void maxHeapify(int[] arr, int i, int heapSize) {
 - 平均时间复杂度：O(nlogn)
 - 最坏时间复杂度：O(n^2)
 - 空间复杂度：O(logn) ~ O(n)
+- 平均比较次数：nlogn
 
 {% video Quicksort.mp4 %}
 
