哈希/链表/二分

--- a/study_notes/source/_posts/哈希表-设计哈希集合与哈希映射.md
+++ b/study_notes/source/_posts/哈希表-设计哈希集合与哈希映射.md
@@ -12,8 +12,9 @@ hidden: true
 # 什么是哈希表?
 > A hash table is a collection of items which are stored in such a way as to make it easy to find them later.
 **哈希表是一组数据的集合，该存储方式便于以后查找。**
+> 它把任意长度的信息转换成固定的长度输出（哈希值）。根据特定的哈希值，它可以找到对应的原信息值
 
-哈希表是根据哈希函数组织数据、通过键（Key）直接访问在存储器存储位置的数据结构，其基本原理如下图所示。哈希表通过 **{% label success @哈希函数 %}** ，将不同的 **{% label info @键 %}** 映射到不同的 **{% label primary @桶 %}** 里面。
+哈希表是根据哈希函数组织数据、通过键（Key）直接访问在存储器存储位置的数据结构，该结构与数组（顺序存储）、链表（链式存储）并不相同，被称为“**散列存储**”，其基本原理如下图所示。哈希表通过 **{% label success @哈希函数 %}** ，将不同的 **{% label info @键 %}** 映射到不同的 **{% label primary @桶 %}** 里面。
 - 空间复杂度O(n)
 - 时间复杂度O(1)
     - 当存储容器为**链表**时，最坏时间复杂度为O(n)
@@ -32,7 +33,7 @@ hidden: true
 - **{% label warning @哈希映射(HashMap) %}**：**映射**数据结构的实现之一，用于存储(key, value) **键值对**。
 
 # 哈希函数
-原始数据经过 **{% label success @哈希函数 %}** 的处理后获得 **{% label danger @哈希值 %}** ，这是用来在 **{% label primary @桶 %}** 中查找元素的索引。一个好的哈希函数应该具有以下三种特点：
+哈希函数又称**散列函数**，原始数据经过 **{% label success @哈希函数 %}** 的处理后获得 **{% label danger @哈希值 %}** ，这是用来在 **{% label primary @桶 %}** 中查找元素的索引。一个好的哈希函数应该具有以下三种特点：
 - 高效性，哈希函数需要简便高效、容易计算
 - 均匀性，计算结果应该均匀分布，避免产生哈希冲突或空间浪费
 - 一致性，同一个 **{% label info @键 %}** 经过 **{% label success @哈希函数 %}** 的处理产生相同的值
@@ -105,6 +106,7 @@ Hash Collision，这种灾难性的事件发生在当两个数据的 **{% label 
 - **缺点**
     - 线性探测在负载系数很高时表现出严重的性能下降
     - 碰撞的数量趋向于随着现有碰撞的数量而增长
+    - 同义词在散列表中不一定相邻
 {% endnote %}
 
 ## 链地址法
@@ -128,6 +130,7 @@ Hash Collision，这种灾难性的事件发生在当两个数据的 **{% label 
 ## 双散列
 - 有**两个** **{% label success @哈希函数 %}** 
 - 表的**结构是数组**
+- 优点是不容易产生**聚集**
 - 当遇到碰撞时，在原本计算得到的 **{% label danger @哈希值 %}** 的基础上 + 1 * h2(value) % 数组大小，也就是用上了第二个函数（h2）来计算新的 **{% label danger @哈希值 %}** 。
 - 如果再遇到，那就在**最开始得到的 {% label danger @哈希值 %} 上** + 2 * h2(value) % 数组大小
 - 相同思想递归
@@ -187,3 +190,43 @@ boolean findDuplicartes(List<T> keys){
 }
 ```
 {% endnote %}
+
+# 哈希映射
+**{% label warning @哈希映射(HashMap) %}**：**映射**数据结构的实现之一，用于存储(key, value) **键值对**。哈希映射的主要用途体现在 value 上，起到**存储信息** 和 **聚合信息**（唯一字符） 的作用。
+- 统计字符的出现次数
+- 更新元素的最新下标
+- 统计相同键的和
+- 建立两张表/数组的映射关系（LC205）
+
+很多编程语言中都内置了哈希集合的实现方法，例如 Java 中的 HashMap。
+```Java
+Map<Ingeter, Integer> hm = new HashMap<>();
+hm.put(1,1);            // 加入kvp
+hm.putIfAbsent(2,2);    // 如果已经存在该kvp，则无法加入
+hm.get(1);              // 通过键获取值，如不存在返回null
+hm.getOrDefault(3,1);   // 尝试通过键获取值，如不存在返回默认值
+hm.remove(2);           // 移除kvp，如果存在则返回对应的value
+System.out.println(hm.containsKey(2));      // false，检查是否存在某键
+System.out.println(hm.containsValue(1));    // true，检查是否存在某值，复杂度为线性（遍历了）
+System.out.println(hm.isEmpty());           // false
+System.out.println(hm.size());              // 1
+hm.clear();             // 清空
+```
+ 
+# 题外话-哈希表在Java中的历史
+在做题的时候偶然发现了独立于HashMap或者HashSet的Hashtable类。Hashtable继承自Dictionary类，是Java 1.2 版本之前用来表示哈希表的方法。
+Hashtable与HashMap的主要区别在于：
+1. Hashtable只有一个contains方法，检查一个值是否在哈希表中有对应的键
+    相比之下，HashMap有containsKey和containsValue两个方法，更为清晰
+2. Hashtable继承自Dictionary类，而HashMap继承自AbstractMap类，是Map接口的一个实现
+3. Hashtable是同步（线程安全）的，而HashMap不是
+4. HashMap允许将空值作为一个表的条目的key或value，而Hashtable不允许
+
+此外，Hashtable和HashMap采用的hash/rehash算法都大概一样，所以性能不会有很大的差异。
+
+> 线程安全的Map
+在JDK 1.5及更高版本环境中，HashMap和TreeMap都不是线程安全的。但是我们可以通过下面两种方式实现线程安全的Map：
+>- Map map = new ConcurrentHashMap();
+ConcurrentHashMap将Hash表分为16个桶(segment)，每次只对需要的桶进行加锁（而Hashtable是锁整张表的）。
+>- Map map = Collections.synchronizedMap(new HashMap());
+Collections.synchronizedXxx()方法，可以将指定的集合包装成线程同步的集合。
