--- a/study_notes/source/_posts/算法与数据结构.md
+++ b/study_notes/source/_posts/算法与数据结构.md
@@ -20,6 +20,7 @@ comments: false
 ## 双指针
 
 ## 二分
+[二分查找的三种模板](/next/二分查找/)
 
 ## 递归与分治
 [递归思想](/next/递归思想/)
@@ -40,6 +41,7 @@ comments: false
 ## 队列/栈
 
 ## 链表
+[链表](/next/链表/)
 
 ## 哈希表
 [哈希表-设计哈希集合与哈希映射](/next/哈希表-设计哈希集合与哈希映射)
